# replit-test

./: .env.example  .gitignore  .replit  CUSTOMIZATION_GUIDE.md  DATABASE_API_SETUP.md  REST_API_SETUP.md  package-lock.json  package.json  pyproject.toml  run.sh  run_python_backend.sh
client/: index.html  tailwind.config.js
client/src/: App.tsx  index.css  pythonBackendProxy.ts
client/src/components/chat/: ChatContainer.tsx  ChatMessage.tsx
client/src/hooks/: useChatSession.ts
client/src/lib/: hooks.ts  types.ts
client/src/pages/: dashboard.tsx
mock_api/: app.py
server/: app.py  config.ts  openai.ts  queryService.ts  routes.ts  test.py
server/langchain/: agent.ts  apiClient.ts  chains.ts  routes.ts  simplified.ts  tools.ts
server/loyalty_agent/: __init__.py  agent.py  chat_history.py  loyalty_agent.py  workflow_supervisor.py
server/loyalty_agent/config/: prompts.py
server/loyalty_agent/mock_data/: __init__.py  mock_data.py
server/loyalty_agent/models/: __init__.py  schema.py  state.py
server/loyalty_agent/tools/: insights_generator.py  query_executor.py  response_validator.py  security_validator.py  sql_generator.py
server/loyalty_agent/utils/: __init__.py  error_handling.py  schema_utils.py  validators.py
server/python/: app.py  loyalty_agent.py  run.py
server/schema/: schemaLoader.ts
server/schema/yml/: challenge_completions.yml  challenges.yml  customers.yml  daily_client_campaigns.yml  daily_client_coupons.yml  daily_client_orders.yml  daily_client_transactions.yml  points_transactions.yml
shared/: schema.ts
(+9 files in other folders)
